# tdc-typography-generation

./: .gitignore  README.md  pyproject.toml
data/: font2ttf.pkl  fonttype2fontid_fix.pkl  svgid2scaleinfo.pkl
data/cluster/: canvas_aspect_ratio_16.pkl  text_angle_16.pkl  text_center_x_64.pkl  text_center_y_64.pkl  text_font_color_64.pkl  text_font_size_16.pkl  text_height_16.pkl  text_left_64.pkl  text_letter_spacing_16.pkl  text_line_height_scale_16.pkl  text_line_height_size_16.pkl  text_top_64.pkl  text_width_16.pkl
data/config/bart/: canvas_embedding_flag_config.yaml  data_config.yaml  metainfo.yaml  model_config.yaml  test_config.yaml  text_element_embedding_flag_config.yaml  text_element_prediction_flag_config.yaml  train_config.yaml
docs/: _config.yaml  index.md
docs/_layouts/: default.html
notebooks/: score.ipynb  vis.ipynb
src/typography_generation/: __main__.py
src/typography_generation/config/: attribute_config.py  base_config_object.py  config_args_util.py  default.py
src/typography_generation/io/: build_dataset.py  crello_util.py  data_loader.py  data_object.py  data_utils.py
src/typography_generation/model/: bart.py  baseline.py  bottleneck.py  canvas_vae.py  common.py  decoder.py  embedding.py  encoder.py  mfc.py  mlp.py  model.py
src/typography_generation/preprocess/: map_features.py
src/typography_generation/tools/: color_func.py  loss.py  (+8 more)
tests/: conftest.py  test_main.py
tests/io/: test_data_loader.py
tests/model/: test_model.py
tests/tool/: test_eval.py  test_sample.py  test_structure_preserved_sampler.py  test_train.py
(+3 files in other folders)
